--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] max-h-[50%] float-left px-1"
+              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               src="/photos/freddy_mercury.webp"
               alt="Freddy Mercury"
             />
@@ -346,7 +346,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] max-h-[50%] float-left px-1"
+              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               src="/photos/panana_greenland.png"
               alt=""
             />
@@ -371,7 +371,7 @@
           </div>
           <p>
             <svg
-              class="max-w-[50%] max-h-[50%] float-left mt-4"
+              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               viewBox="0 0 56 35"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
