--- a/international.html
+++ b/international.html
@@ -146,7 +146,7 @@
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <section
-        class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
+      class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
       >
         <div class="flex flex-col lg:flex-row lg:gap-4">
           <!-- main article------------------------------------------- -->
@@ -198,7 +198,7 @@
         <div class="flex flex-col xl:flex-row xl:gap-1 xl:border-t">
           <!-- secondary article-------------------------------------- -->
           <div
-            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 lg:border-r"
+            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 xl:border-r"
           >
             <div class="date-and-title">
               <div>USA, March 31, 2025</div>
@@ -208,9 +208,9 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left px-1"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="https://imgs.search.brave.com/DiBZUym7J88LReEVq1QYPQw06nNdMjYF-0c3uNpHB5o/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly8xMDAw/bG9nb3MubmV0L3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE4LzAz/L2xvZ28td2EtNTAw/eDQxNy5wbmc"
-                alt="Freddy Mercury"
+                alt="WhatsApp logo"
               />
               The US-government has announced a new partnership with Meta for
               communication services for the CIA. White-House press-secretary,
@@ -220,7 +220,8 @@
               <q
                 >What could go wrong? It's not like we're adding the
                 surveillance targets to our group chat!</q
-              >. Meta founder, Mark Zuckeberg, posted on Facebook that a special
+              >. <br />
+               Meta founder, Mark Zuckeberg, posted on Facebook that a special
               emoji would be created for the CIA.
               <q
                 >We're thinking that it would be cool with a smiley having the
@@ -232,7 +233,7 @@
           </div>
           <!-- secondary article-------------------------------------- -->
           <div
-            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 lg:border-r"
+            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 xl:border-r"
           >
             <div class="date-and-title">
               <div>U.K, March 31, 2025</div>
@@ -240,7 +241,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left px-1"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="/photos/panana_greenland.png"
                 alt=""
               />
@@ -257,7 +258,7 @@
           </div>
           <!-- secondary article-------------------------------------- -->
           <div
-            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 lg:pr-0.5"
+            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 xl:pr-0.5"
           >
             <div class="date-and-title">
               <div>China, March 31, 2025</div>
@@ -267,7 +268,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left mt-4"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="https://imgs.search.brave.com/uCS-JDudhpy5KlDWqcNJa3hQPnf8tkgTjXNMwu8cTec/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pY2hl/Zi5iYmNpLmNvLnVr/L25ld3MvNDgwL2Nw/c3Byb2RwYi9iOTA4/L2xpdmUvMWEwYzFi/ODAtZjk2Yy0xMWVm/LTllNjEtNzFlZTcx/ZjI2ZWIxLmpwZy53/ZWJw"
                 alt="A chinese factory worker"
               />
@@ -278,7 +279,7 @@
               one-hour decrease in their working day. Wang Xiaoping, the
               minister of labor in China, has said he was happy for worker to be
               able to spend more time with their families. Mr Xiaoping declined
-              to answered questions about the plans to extend those workers week
+              to answer questions about the plans to extend those workers week
               to a 8-days / week schedule.
             </p>
             <i class="author">by Wang Wei</i>
@@ -522,7 +523,7 @@
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
       <a
-        class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+      class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40"
         href="#"
         ><img
           class="mx-auto"
