--- a/tech.html
+++ b/tech.html
@@ -206,7 +206,7 @@
         <div class="flex flex-col xl:flex-row xl:gap-1 xl:border-t">
           <!-- secondary article-------------------------------------- -->
           <div
-            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 lg:border-r"
+            class="flex flex-col items-center content-center my-0.5 px-2 xl:w-1/4 xl:border-r"
           >
             <div class="date-and-title">
               <div>USA, March 31, 2025</div>
@@ -216,7 +216,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left px-1"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="https://imgs.search.brave.com/DiBZUym7J88LReEVq1QYPQw06nNdMjYF-0c3uNpHB5o/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly8xMDAw/bG9nb3MubmV0L3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE4LzAz/L2xvZ28td2EtNTAw/eDQxNy5wbmc"
                 alt="WhatsApp logo"
               />
@@ -250,7 +250,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left px-1"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="/photos/indian_AI.jpeg"
                 alt=""
               />
@@ -286,7 +286,7 @@
             </div>
             <p>
               <img
-                class="max-w-[50%] max-h-[50%] float-left mt-4"
+                class="max-w-[50%] float-left px-1 md:max-w-[25%] md:max-h-36 lg:max-w-[40%] xl:max-w-full xl:max-h-full"
                 src="https://imgs.search.brave.com/nKqpSgYB0fgoCBWCVX79A3pcf4yW_oHKn9lM1YSxd-4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdW5i/cmlkZ2Vzb2xhci5j/b20vd3AtY29udGVu/dC91cGxvYWRzLzIw/MjMvMDEvc29sYXIt/cGFuZWwtd2l0aC1z/dW4tMTAyNHg1NzYu/anBn"
                 alt="A chinese factory worker"
               />
@@ -387,7 +387,7 @@
         >
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>China, April 1, 2025</div>
@@ -400,7 +400,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>India, April 1, 2025</div>
@@ -416,7 +416,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>San Francisco, April 1, 2025</div>
@@ -432,7 +432,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Tokyo, April 1, 2025</div>
@@ -447,7 +447,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Berlin, April 1, 2025</div>
@@ -463,7 +463,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>London, April 1, 2025</div>
@@ -478,7 +478,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Paris, April 1, 2025</div>
@@ -491,7 +491,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Los Angeles, April 1, 2025</div>
@@ -506,7 +506,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w/full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Sydney, April 1, 2025</div>
@@ -521,7 +521,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-            class="p-2 my-2 border text-center w-full lg:w-1/5 lg:h-44 xl:w-2/11"
+            class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>New York, April 1, 2025</div>
