layout fixes after feedback from fellow students

--- a/economy.html
+++ b/economy.html
@@ -156,6 +156,40 @@
           <!-- main article------------------------------------------- -->
           <div class="flex flex-col items-center content-center my-0.5">
             <h1 class="underline">The economy</h1>
+            <div class="stock-banner">
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+              <div class="single-stock-plus">
+                <b>AMZ</b>
+                <p>+45%</p>
+              </div>
+            </div>
             <div class="date-and-title">
               <div>USA, March 31, 2025</div>
               <h2>
