--- a/international.html
+++ b/international.html
@@ -329,10 +329,10 @@
                   Joe Rogan to run in 2028 US election
                 </h3>
                 <div class="flip-card-back">
-                  The former MMA-fighter and stand-up comedian said he'll kick
+                  The former MMA-fighter said he'll kick
                   his opposition's ass.
                 </div>
-              </div>
+              </div>s
             </a>
             <!-- fliping   article-------------------------------------- -->
             <a class="flip-card" href="#">
