--- a/tech.html
+++ b/tech.html
@@ -515,7 +515,7 @@
               </h2>
             </div>
             <p>
-              The app tracks kangaroo sightings and directs you to the nearest
+              It tracks kangaroo sightings and directs you to the nearest
               roo-friendly coffee shop.
             </p>
           </div>
