fixed stock banner animation

--- a/economy.html
+++ b/economy.html
@@ -152,88 +152,98 @@
       <section
         class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
       >
-        <div class="flex flex-col lg:flex-row lg:gap-4">
-          <!-- main article------------------------------------------- -->
-          <div class="flex flex-col items-center content-center my-0.5">
-            <h1 class="underline">The economy</h1>
+        <!-- main article------------------------------------------- -->
+        <div
+          class="flex flex-col items-center content-center my-0.5 overflow-hidden"
+        >
+          <h1 class="underline">The Economy</h1>
+          <div class="stock-container">
             <div class="stock-banner">
               <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
+                <b>ADAM</b>
+                <p>+45.7%</p>
               </div>
               <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
+                <b>AMZN</b>
+                <p>+104.5%</p>
               </div>
               <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
+                <b>META</b>
+                <p>+66.6%</p>
+              </div>
+              <div class="single-stock-minus">
+                <b>TSL</b>
+                <p>-50%</p>
               </div>
               <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
+                <b>MRSTL</b>
+                <p>+27.5%</p>
+              </div>
+              <div class="single-stock-minus">
+                <b>TEOF</b>
+                <p>+27.5%</p>
+              </div>
+              <div class="single-stock-minus">
+                <b>BA</b>
+                <p>-21.8%</p>
+              </div>
+              <div class="single-stock-minus">
+                <b>BTC</b>
+                <p>-2.7%</p>
+              </div>
+              <div class="single-stock-minus">
+                <b>USD</b>
+                <p>-666.0%</p>
               </div>
               <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
-              </div>
-              <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
-              </div>
-              <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
-              </div>
-              <div class="single-stock-plus">
-                <b>AMZ</b>
-                <p>+45%</p>
+                <b>EUR</b>
+                <p>+1.2%</p>
               </div>
             </div>
-            <div class="date-and-title">
-              <div>USA, March 31, 2025</div>
-              <h2>
-                <a href="#"
-                  >Stock Market Today: The Rollercoaster of Financial Genius and
-                  Outrageous Predictions</a
-                >
-              </h2>
-            </div>
-            <img
-              class="max-h-36 lg:max-h-64"
-              src="https://imgs.search.brave.com/LzVMES4S_gUBRmC6rhTKDefaHtGfbrNZeUwgAENVZfs/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cmV1dGVycy5jb20v/cmVzaXplci92Mi8z/UEtQQkVRTTRCTkRM/QUs2RVRRSTNBV1VH/WS5qcGc_YXV0aD02/OTIxMDUwZWE1MzBk/Yzg0ZWVhYTIyYjhh/ZGY1NTVmYzJjYzEy/ODE4ZmEwNjM4MGFl/OGQ1NzU4ZGZjNjJh/NDBhJndpZHRoPTk2/MCZxdWFsaXR5PTgw"
-              alt="STOCKHOLM'S HARBOUR"
-            />
-            <p class="lg:columns-3">
-              In today’s shocking twist of events, the U.S. stock market has
-              decided to rewrite all previous economic textbooks, and frankly,
-              it might be time to get some popcorn and watch the show. The Dow
-              Jones Industrial Average swung so wildly, it looked like a toddler
-              playing with a slingshot, climbing up 500 points one minute, only
-              to dive down 800 the next, all while investors attempted to
-              predict which way the wind was blowing. This bizarre performance
-              has left many scratching their heads and others clutching their
-              portfolios like it’s the last donut at the office. Market
-              analysts—who are usually known for their polite, well-reasoned
-              explanations—have simply started recommending people toss darts at
-              stock charts to determine their next investment. “You know, it
-              might be the way to go,” said one particularly confused analyst,
-              wiping away the sweat as the S&P 500 seemed to act like a toddler
-              hopped up on sugar. Meanwhile, Elon Musk has tweeted something
-              that might be related to cryptocurrency, or perhaps the meaning of
-              life, or maybe it was just a photo of his dog, but naturally,
-              Bitcoin surged by 25% in minutes, leaving Wall Street executives
-              pondering whether to start their own meme stock. And in an
-              unprecedented move, the Federal Reserve has started offering
-              “mystery boxes” as a way to stabilize the economy, with a 50/50
-              chance of receiving either an interest rate hike or a free
-              vacation to the Bahamas. "At least it'll be fun," said one
-              economist as he boarded a plane. As for tomorrow? Well, the market
-              will probably do whatever it wants. Hold on tight!
-            </p>
-            <i class="author"> by Chet Gepeto</i>
           </div>
+          <div class="date-and-title mt-8">
+            <div>USA, March 31, 2025</div>
+            <h2>
+              <a href="#"
+                >Stock Market Today: The Rollercoaster of Financial Genius and
+                Outrageous Predictions</a
+              >
+            </h2>
+          </div>
+          <img
+            class="max-h-36 lg:max-h-64"
+            src="https://imgs.search.brave.com/LzVMES4S_gUBRmC6rhTKDefaHtGfbrNZeUwgAENVZfs/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cmV1dGVycy5jb20v/cmVzaXplci92Mi8z/UEtQQkVRTTRCTkRM/QUs2RVRRSTNBV1VH/WS5qcGc_YXV0aD02/OTIxMDUwZWE1MzBk/Yzg0ZWVhYTIyYjhh/ZGY1NTVmYzJjYzEy/ODE4ZmEwNjM4MGFl/OGQ1NzU4ZGZjNjJh/NDBhJndpZHRoPTk2/MCZxdWFsaXR5PTgw"
+            alt="a stock-broker in the stock-exchange"
+          />
+          <p class="lg:columns-3">
+            In today’s shocking twist of events, the U.S. stock market has
+            decided to rewrite all previous economic textbooks, and frankly, it
+            might be time to get some popcorn and watch the show. The Dow Jones
+            Industrial Average swung so wildly, it looked like a toddler playing
+            with a slingshot, climbing up 500 points one minute, only to dive
+            down 800 the next, all while investors attempted to predict which
+            way the wind was blowing. This bizarre performance has left many
+            scratching their heads and others clutching their portfolios like
+            it’s the last donut at the office. Market analysts—who are usually
+            known for their polite, well-reasoned explanations—have simply
+            started recommending people toss darts at stock charts to determine
+            their next investment. “You know, it might be the way to go,” said
+            one particularly confused analyst, wiping away the sweat as the S&P
+            500 seemed to act like a toddler hopped up on sugar. Meanwhile, Elon
+            Musk has tweeted something that might be related to cryptocurrency,
+            or perhaps the meaning of life, or maybe it was just a photo of his
+            dog, but naturally, Bitcoin surged by 25% in minutes, leaving Wall
+            Street executives pondering whether to start their own meme stock.
+            And in an unprecedented move, the Federal Reserve has started
+            offering “mystery boxes” as a way to stabilize the economy, with a
+            50/50 chance of receiving either an interest rate hike or a free
+            vacation to the Bahamas. "At least it'll be fun," said one economist
+            as he boarded a plane. As for tomorrow? Well, the market will
+            probably do whatever it wants. Hold on tight!
+          </p>
+          <i class="author"> by Chet Gepeto</i>
         </div>
+
         <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div class="flex flex-col xl:flex-row xl:gap-1 xl:border-t">
           <!-- secondary article-------------------------------------- -->
