--- a/international.html
+++ b/international.html
@@ -332,7 +332,7 @@
                   The former MMA-fighter said he'll kick
                   his opposition's ass.
                 </div>
-              </div>s
+              </div>
             </a>
             <!-- fliping   article-------------------------------------- -->
             <a class="flip-card" href="#">
