fixed footer in economy not standard (cpoy/paste error)

--- a/economy.html
+++ b/economy.html
@@ -575,7 +575,7 @@
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
       <a
-        class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+        class="max-w-20 ml-4 self-center flex flex-col items-center sm:max-w-40"
         href="#"
         ><img
           class="mx-auto"
