fixed width of sidebar on smaller screen

--- a/domestic.html
+++ b/domestic.html
@@ -302,8 +302,8 @@
               <div class="flip-card-inner">
                 <h3 class="flip-card-front">Dr Alban to run for king</h3>
                 <div class="flip-card-back">
-                  The famous pop-singer Alban Uzoma Nwapa aka Dr Alban believes
-                  its time for Sweden to have a new monarchy.
+                  The famous pop-singer Alban Uzoma Nwapa believes its time for
+                  a new monarchy.
                 </div>
               </div>
             </a>
