small administrative changes (section -> main etc.)

--- a/entertainment.html
+++ b/entertainment.html
@@ -149,7 +149,7 @@
       </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <section
+      <main
         class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
       >
         <div class="flex flex-col lg:flex-row lg:gap-4">
@@ -333,20 +333,17 @@
                   Joe Rogan to run in 2028 US election
                 </h3>
                 <div class="flip-card-back">
-                  The former MMA-fighter and stand-up comedian said he'll kick
-                  his opposition's ass.
+                  The former MMA-fighter said he'll kick his opposition's ass.
                 </div>
               </div>
             </a>
             <!-- fliping   article-------------------------------------- -->
             <a class="flip-card" href="#">
               <div class="flip-card-inner">
-                <h3 class="flip-card-front">
-                  Surprise on Arnol Schwarzenegger death bed
-                </h3>
+                <h3 class="flip-card-front">Schwarzenegger not dead</h3>
                 <div class="flip-card-back">
                   The austrian actor turned out to be a real killer robot from
-                  the future. It just ran out of battery.
+                  the future.
                 </div>
               </div>
             </a>
@@ -357,8 +354,8 @@
                   MCU phase #5648 <br />to start this fall
                 </h3>
                 <div class="flip-card-back">
-                  The Ecko Of The Fox is unable to write about this... we
-                  stopped caring 505 phases ago.
+                  We're unable to write about this... we stopped caring 505
+                  phases ago.
                 </div>
               </div>
             </a>
@@ -557,7 +554,7 @@
             <p>The band is looking forward to a concert in 2045.</p>
           </div>
         </section>
-      </section>
+      </main>
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
