--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       </div>
     </section>
     <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-    <section
+    <main
       class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
     >
       <div class="flex flex-col lg:flex-row lg:gap-4">
@@ -469,7 +469,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </main>
     <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section
       class="flex flex-col items-center px-2 pb-1 mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
