--- a/economy.html
+++ b/economy.html
@@ -149,7 +149,7 @@
       </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <section
+      <main
         class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
       >
         <!-- main article------------------------------------------- -->
@@ -570,7 +570,7 @@
             </p>
           </div>
         </section>
-      </section>
+      </main>
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
