--- a/international.html
+++ b/international.html
@@ -145,7 +145,7 @@
       </aside>
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <section
+      <main
       class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
       >
         <div class="flex flex-col lg:flex-row lg:gap-4">
@@ -518,7 +518,7 @@
             </p>
           </div>
         </section>
-      </section>
+      </main>
     </section>
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
