modified tags in index, added instruction for editorial for mobile screens

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     >
       <div class="flex flex-col lg:flex-row lg:gap-4">
         <!-- edito-------------------------------------------------- -->
-        <div
+        <article
           class="group flex flex-col items-center my-0.5 p-1 border-b lg:w-1/4 lg:border-b-0 lg:border-r"
         >
           <div
@@ -242,6 +242,9 @@
           </div>
           <h1 class="text-2xl underline my-0">Editorial</h1>
           <h2>Real news are unreal!</h2>
+          <i class="-mt-0.5 group-hover:hidden md:hidden"
+            >(hover to read Editorial)</i
+          >
           <p class="hidden max-md:group-hover:block md:block">
             In this, the inaugural edition of
             <strong>The Ecko Of The Fox</strong>, we’re taking a hard look at
@@ -260,9 +263,11 @@
           <i class="author hidden max-md:group-hover:block md:block"
             >by Chet Gepeto</i
           >
-        </div>
+        </article>
         <!-- main article------------------------------------------- -->
-        <div class="flex flex-col items-center content-center my-0.5 lg:w-3/4">
+        <article
+          class="flex flex-col items-center content-center my-0.5 lg:w-3/4"
+        >
           <div class="date-and-title">
             <div>France, March 31, 2025</div>
             <h2>
@@ -303,12 +308,12 @@
             More on this story in our next edition.
           </p>
           <i class="author"> by John Doe</i>
-        </div>
+        </article>
       </div>
       <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <div class="flex flex-col lg:flex-row lg:gap-1 lg:border-t">
         <!-- secondary article-------------------------------------- -->
-        <div
+        <article
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <div class="date-and-title">
@@ -335,9 +340,9 @@
             >
           </p>
           <i class="author"> by Bob Rock</i>
-        </div>
+        </article>
         <!-- secondary article-------------------------------------- -->
-        <div
+        <article
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
         >
           <div class="date-and-title">
@@ -360,9 +365,9 @@
             considering the offer.
           </p>
           <i class="author">by Gerard Buttler</i>
-        </div>
+        </article>
         <!-- secondary article-------------------------------------- -->
-        <div
+        <article
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
         >
           <div class="date-and-title">
@@ -395,7 +400,7 @@
             in order to finish the update.
           </p>
           <i class="author">Frank the Fox</i>
-        </div>
+        </article>
         <!-- FLIPING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
           class="overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
