--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </ul>
       </div>
     </header>
+
     <!-- SIDEBAR++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <aside class="sidebar">
       <img class="max-w-20 h-10 pr-4" src="logos/EoF logo.png" alt="" />
@@ -143,6 +144,7 @@
         </ul>
       </div>
     </aside>
+
     <!-- WEATHER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section class="flex flex-col px-2 pt-16 mx-0.5 lg:pt-28 sm:border-b">
       <div
@@ -158,6 +160,7 @@
             <i class="text">Beau soleil</i>
           </div>
         </div>
+
         <!-- city--------------------------------------------------- -->
         <div
           class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
@@ -168,6 +171,7 @@
             <i class="text-xs">Eurovision fever</i>
           </div>
         </div>
+
         <!-- city--------------------------------------------------- -->
         <div
           class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
@@ -178,6 +182,7 @@
             <i class="text-xs">as usual</i>
           </div>
         </div>
+
         <!-- city--------------------------------------------------- -->
         <div
           class="w-2/9 flex flex-row justify-center gap-1 items-center lg:w-2/17"
@@ -199,6 +204,7 @@
             <i class="text-xs">Orange wave</i>
           </div>
         </div>
+
         <!-- city--------------------------------------------------- -->
         <div
           class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center"
@@ -209,6 +215,7 @@
             <i class="text-xs">Star struck</i>
           </div>
         </div>
+
         <!-- city--------------------------------------------------- -->
         <div
           class="hidden w-2/17 lg:flex flex-row justify-center gap-1 items-center"
@@ -221,6 +228,7 @@
         </div>
       </div>
     </section>
+
     <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <main
       class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
@@ -264,6 +272,7 @@
             >by Chet Gepeto</i
           >
         </article>
+
         <!-- main article------------------------------------------- -->
         <article
           class="flex flex-col items-center content-center my-0.5 lg:w-3/4"
@@ -275,7 +284,7 @@
             </h2>
           </div>
           <img
-            class="max-h-36 lg:max-h-64"
+            class="max-h-36 p-0.5 lg:max-h-64"
             src="/photos/aliens_in_paris.jpg"
             alt=""
           />
@@ -310,6 +319,7 @@
           <i class="author"> by John Doe</i>
         </article>
       </div>
+
       <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <div class="flex flex-col lg:flex-row lg:gap-1 lg:border-t">
         <!-- secondary article-------------------------------------- -->
@@ -324,7 +334,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
+              class="max-w-[50%] float-left py-0.5 px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               src="/photos/freddy_mercury.webp"
               alt="Freddy Mercury"
             />
@@ -335,12 +345,13 @@
             born, has learnt to walk, talk, sing and grown chest hair. <br />
             Regarding the legal status of the clone, Taylor said
             <q
-              >We're used to fight for song rights, our ownership of Freddy i
-              undebatalbe.</q
+              >We're used to fight for song rights, our ownership of Freddy is
+              undebatable.</q
             >
           </p>
           <i class="author"> by Bob Rock</i>
         </article>
+
         <!-- secondary article-------------------------------------- -->
         <article
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:border-r"
@@ -351,7 +362,7 @@
           </div>
           <p>
             <img
-              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
+              class="max-w-[50%] float-left py-0.5 px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               src="/photos/panana_greenland.png"
               alt=""
             />
@@ -366,6 +377,7 @@
           </p>
           <i class="author">by Gerard Buttler</i>
         </article>
+
         <!-- secondary article-------------------------------------- -->
         <article
           class="flex flex-col items-center content-center my-0.5 px-2 lg:w-1/4 lg:pr-0.5"
@@ -376,7 +388,7 @@
           </div>
           <p>
             <svg
-              class="max-w-[50%] float-left px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
+              class="max-w-[50%] float-left py-0.5 px-1 md:max-h-36 lg:max-w-full lg:max-h-full xl:max-w-[50%]"
               viewBox="0 0 56 35"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -401,6 +413,7 @@
           </p>
           <i class="author">Frank the Fox</i>
         </article>
+
         <!-- FLIPING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <div
           class="overflow-hidden flex flex-col gap-4 justify-around my-2 lg:w-1/4"
@@ -419,6 +432,7 @@
               </div>
             </div>
           </a>
+
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
@@ -426,11 +440,12 @@
                 Putin caught with russian blow up dolls
               </h3>
               <div class="flip-card-back">
-                The dolls were hiding inside each others, read about this
+                The dolls were hiding inside each others, read about his
                 survival story
               </div>
             </div>
           </a>
+
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
@@ -442,6 +457,7 @@
               </div>
             </div>
           </a>
+
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
@@ -452,6 +468,7 @@
               </div>
             </div>
           </a>
+
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
@@ -463,6 +480,7 @@
               </div>
             </div>
           </a>
+
           <!-- fliping   article-------------------------------------- -->
           <a class="flip-card" href="#">
             <div class="flip-card-inner">
@@ -475,6 +493,7 @@
         </div>
       </div>
     </main>
+
     <!-- SECONDARY CONTENT+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <section
       class="flex flex-col items-center px-2 pb-1 mx-0.5 text-justify border-t lg:max-w-[1300px] lg:mx-auto"
@@ -489,14 +508,15 @@
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 1
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                It's been said before...
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                It's been said before...
+              </h4>
             </a>
             <p class="text-sm">
               But I am old, so I'll say it again: the Earth is flatter than an
@@ -504,19 +524,21 @@
             </p>
             <i class="author mt-auto">Grumpy Dwarf</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 2
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                I like to move it, move it...
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                I like to move it, move it...
+              </h4>
             </a>
             <p class="text-sm">
               I like to move it, move it. I like to move it, move it. I like to
@@ -524,19 +546,21 @@
             </p>
             <i class="author mt-auto">Secret Dentist</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 3
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                What time is it?
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                What time is it?
+              </h4>
             </a>
             <p class="text-sm">
               Seriously I lost my watch. I was a golden Breitling worth
@@ -544,19 +568,21 @@
             </p>
             <i class="author mt-auto">I forgot</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 4
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                Heziekel 25:17
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                Heziekel 25:17
+              </h4>
             </a>
             <p class="text-sm">
               And you will know, my name is the lord when I lay my vengeance
@@ -565,6 +591,7 @@
             <i class="author mt-auto">Jules V.</i>
           </div>
         </div>
+
         <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
         <div
           class="hidden sm:flex flex-wrap justify-center gap-4 sm:gap-2 sm:visible"
@@ -574,14 +601,15 @@
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 5
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                I'm looking forward to it!
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                I'm looking forward to it!
+              </h4>
             </a>
             <p class="text-sm mt-auto">
               When prime minister Mette Frederiksen announced we'd be sold to
@@ -590,19 +618,21 @@
             </p>
             <i class="author">Qanilima, el hielo que se va</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 6
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                God is real, his name is Bob
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                God is real, his name is Bob
+              </h4>
             </a>
             <p class="text-sm mt-auto">
               The clarity of it all hit me last sunday. After a bottle of
@@ -611,19 +641,21 @@
             </p>
             <i class="author">Secret Dentist</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 7
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                I remember meeting Elvis
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                I remember meeting Elvis
+              </h4>
             </a>
             <p class="text-sm">
               It was moonlit night at LAX last year. I was between connecting
@@ -632,19 +664,21 @@
             </p>
             <i class="author mt-auto">I forgot</i>
           </div>
+
           <!-- opinion------------------------------------------------ -->
           <div
             class="group flex flex-col border hover:border-2 w-full sm:w-2/5 xl:w-2/9"
           >
             <a class="flex flex-row gap-2" href="#">
-              <h1
+              <h3
+                style="font-family: Mr Dafoe; font-size: 1.75rem"
                 class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
               >
                 8
-              </h1>
-              <h3 class="text-wrap font-[1.25rem] text-left content-center">
-                I kant spel 2 good
               </h3>
+              <h4 class="text-wrap font-[1.25rem] text-left content-center">
+                I kant spel 2 good
+              </h4>
             </a>
             <p class="text-sm">
               Mi ont sarA seys ei nid to learn hauw too writte ei shoold lissen
@@ -655,6 +689,7 @@
         </div>
       </div>
     </section>
+
     <!-- FOOTER++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <footer>
       <div id="logo-social-media">
