fixed issue on economy page-> main width not following responsive design

--- a/economy.html
+++ b/economy.html
@@ -150,11 +150,11 @@
 
       <!-- MAIN CONTENT++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <main
-        class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[1300px] lg:mx-auto lg:border-0"
+        class="flex flex-col px-2 border-b mx-0.5 lg:max-w-[75%] lg:mx-auto lg:border-0 2xl:max-w-[1300px]"
       >
         <!-- main article------------------------------------------- -->
         <div
-          class="flex flex-col items-center content-center my-0.5 overflow-hidden"
+          class="max-w-full flex flex-col items-center content-center my-0.5 overflow-hidden"
         >
           <h1 class="underline">The Economy</h1>
           <div class="stock-container">
