made quick articles taller at lg: to ensure multi-browser compatibility

--- a/international.html
+++ b/international.html
@@ -159,7 +159,7 @@
               </h2>
             </div>
             <img
-              class="max-h-36 lg:max-h-64"
+              class="max-h-36 lg:max-h-64 p-0.5"
               src="/photos/aliens_in_paris.jpg"
               alt=""
             />
@@ -366,7 +366,7 @@
         >
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Italy, March 31, 2025</div>
@@ -378,7 +378,7 @@
           </div>
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>USA, March 31, 2025</div>
@@ -393,7 +393,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Japan, March 31, 2025</div>
@@ -409,7 +409,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Australia, March 31, 2025</div>
@@ -425,7 +425,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Brazil, March 31, 2025</div>
@@ -441,7 +441,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Canada, March 31, 2025</div>
@@ -457,7 +457,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Russia, March 31, 2025</div>
@@ -473,7 +473,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>South Korea, March 31, 2025</div>
@@ -489,7 +489,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Italy, March 31, 2025</div>
@@ -505,7 +505,7 @@
 
           <!-- quick title-------------------------------------------- -->
           <div
-          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-54 xl:w-2/11"
+          class="p-2 my-2 border text-center w-full flex flex-col justify-between lg:w-1/4 lg:h-66 xl:w-2/11"
           >
             <div class="date-and-title">
               <div>Germany, March 31, 2025</div>
