changed 'Policies' link text in footer  and changed Kiev to more commonly known Kyiv

--- a/index.html
+++ b/index.html
@@ -784,15 +784,15 @@
           <ul>
             <li>Our History</li>
             <li>The Team</li>
-            <li>Contact us</li>
+            <li>Contact Us</li>
           </ul>
         </div>
         <div>
           <h2><a href="#">Policies</a></h2>
           <ul>
-            <li>Our History</li>
-            <li>The Team</li>
-            <li>Contact us</li>
+            <li>Our Values</li>
+            <li>Artificial Intelligence</li>
+            <li>Alleged Slavery In Our Offices</li>
           </ul>
         </div>
         <div>
