--- a/international.html
+++ b/international.html
@@ -353,7 +353,7 @@
                   Zelenski prepared to give territory to Russia
                 </h3>
                 <div class="flip-card-back">
-                  <q>They can have Pripyat if they want</q> the Kiev leader said</q>
+                  <q>They can have Pripyat if they want</q> the Kyiv leader said</q>
                 </div>
               </div>
             </a>
@@ -614,15 +614,15 @@
           <ul>
             <li>Our History</li>
             <li>The Team</li>
-            <li>Contact us</li>
+            <li>Contact Us</li>
           </ul>
         </div>
         <div>
           <h2><a href="#">Policies</a></h2>
           <ul>
-            <li>Our History</li>
-            <li>The Team</li>
-            <li>Contact us</li>
+            <li>Our Values</li>
+            <li>Artificial Intelligence</li>
+            <li>Alleged Slavery In Our Offices</li>
           </ul>
         </div>
         <div>
